--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Site settings
-title: BY Blog
-SEOTitle: 柏荧的博客 | BY Blog
+title: L'astro di Chiara
+SEOTitle: 卡亚拉星 | L'astro di Chiara
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+email: huangxinyi8864@gmail.com
+description: "这样的笃定是美丽的 / 但变化无常更是美丽。"
+keyword: "ApoChia, 摸鱼, 杂记, ChiaraSilente"
+url: "http://ChiaraSilente.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "Who stole the soul from the sun / and the world come undone at the seams?"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+# weibo_username:     6275455901
+zhihu_username:     
+github_username:    ChiaraSilente
+facebook_username:  
+jianshu_username:   
+#twitter_username:   SilenteChiara
 
 
 
