--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: L'astro di Chiara
 SEOTitle: 卡亚拉星 | L'astro di Chiara
-header-img: img/ChiaraPlanet.jpg
+header-img: img/IMG_1386.jpg
 email: huangxinyi8864@gmail.com
 description: "这样的笃定是美丽的 / 但变化无常更是美丽。"
 keyword: "ApoChia, 摸鱼, 杂记, ChiaraSilente"
